# bolt-daemon

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  windows-ci.yml
docs/: CHANGELOG.md  COMPATIBILITY.md  DAEMON_CONTRACT.md  E2E_LAN_TEST.md  IPC_CONTRACT.md  NSTREAM_TIMEOUT_EVIDENCE.md  README.md  RELAY_ENVELOPE_SPEC.md  RELAY_SESSION_PROTOCOL.md  STATE.md  TWO_MACHINE_SMOKE.md  WEBTRANSPORT_TLS_SETUP.md
interop/browser/: index.html
scripts/: check_no_panic.sh  contract_smoke.sh  e2e_interop_4_local.sh  e2e_rendezvous_local.sh  e2e_rendezvous_smoke_local.sh  print_two_machine_commands.sh  print_two_machine_smoke_commands.sh  run_rendezvous_pinned.sh
src/: dc_messages.rs  envelope.rs  ice_filter.rs  identity_store.rs  ipc_client_main.rs  legacy_webrtc.rs  lib.rs  main.rs  quic_transport.rs  relay.rs  relay_main.rs  rendezvous.rs  session.rs  smoke.rs  transfer.rs  web_hello.rs  web_signal.rs  ws_btr.rs  ws_endpoint.rs  ws_validation.rs  wt_cert.rs  wt_endpoint.rs
src/ipc/: id.rs  mod.rs  server.rs  transport.rs  trust.rs  types.rs
tests/: btr_golden_vectors.rs  d_e2e_bidirectional.rs  d_e2e_web_to_daemon.rs  h3_golden_vectors.rs  h5_downgrade_validation.rs  n6b1_path_flags.rs  n6b2_windows_pipe.rs  rc3_btr_over_quic.rs  rc3_quic_e2e.rs  rc5_btr_over_ws.rs  sa1_identity_separation.rs  sa1_identity_store.rs  wti5_btr_over_wt.rs  wti5_throughput_bench.rs
tests/ts-harness/: harness.mjs  package-lock.json  package.json
tests/vectors/: envelope-open.vectors.json  sas.vectors.json  web-hello-open.vectors.json
