[package]
name = "bolt-daemon"
version = "0.0.1"
edition = "2021"
description = "Headless WebRTC transport spike for the Bolt Protocol"
license = "MIT"

[[bin]]
name = "bolt-daemon"
path = "src/main.rs"

[[bin]]
name = "bolt-relay"
path = "src/relay_main.rs"

[[bin]]
name = "bolt-ipc-client"
path = "src/ipc_client_main.rs"

[dependencies]
bolt-core = { path = "../bolt-core-sdk/rust/bolt-core" }
bolt-rendezvous-protocol = { git = "https://github.com/the9ines/bolt-rendezvous.git", tag = "rendezvous-protocol-v0.1.0", package = "bolt-rendezvous-protocol" }
datachannel = { version = "0.16", features = ["vendored"] }
webrtc-sdp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
