[package]
name = "bolt-daemon"
version = "0.0.1"
edition = "2021"
description = "Headless WebRTC transport spike for the Bolt Protocol"
license = "MIT"

[lib]
name = "bolt_daemon"
path = "src/lib.rs"

[[bin]]
name = "bolt-daemon"
path = "src/main.rs"

[[bin]]
name = "bolt-relay"
path = "src/relay_main.rs"

[[bin]]
name = "bolt-ipc-client"
path = "src/ipc_client_main.rs"

[features]
test-support = []

[dependencies]
bolt-core = { path = "../bolt-core-sdk/rust/bolt-core" }
bolt-rendezvous-protocol = { git = "https://github.com/the9ines/bolt-rendezvous.git", tag = "rendezvous-v0.2.6-clean-1", package = "bolt-rendezvous-protocol" }
datachannel = { version = "0.16", features = ["vendored"] }
webrtc-sdp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
tungstenite = "0.24"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
datachannel = { version = "0.16", features = ["vendored"] }
webrtc-sdp = "0.3"
bolt-core = { path = "../bolt-core-sdk/rust/bolt-core" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
