[package]
name = "bolt-daemon"
version = "0.0.1"
edition = "2021"
description = "Headless WebRTC transport spike for the Bolt Protocol"
license = "MIT"

[lib]
name = "bolt_daemon"
path = "src/lib.rs"

[[bin]]
name = "bolt-daemon"
path = "src/main.rs"

[[bin]]
name = "bolt-relay"
path = "src/relay_main.rs"

[[bin]]
name = "bolt-ipc-client"
path = "src/ipc_client_main.rs"

[features]
test-support = []
transport-quic = ["dep:quinn", "dep:rustls", "dep:tokio", "dep:rcgen"]
transport-ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
transport-webtransport = ["dep:wtransport", "dep:tokio", "dep:rcgen"]

[dependencies]
bolt-core = { path = "../bolt-core-sdk/rust/bolt-core" }
bolt-transfer-core = { path = "../bolt-core-sdk/rust/bolt-transfer-core" }
bolt-rendezvous-protocol = { git = "https://github.com/the9ines/bolt-rendezvous.git", tag = "rendezvous-v0.2.6-clean-1", package = "bolt-rendezvous-protocol" }
datachannel = { version = "0.16", features = ["vendored"] }
webrtc-sdp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
rand = "0.8"

# WebSocket transport (RC5 PM-RC-02) — feature-gated
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }

# WebTransport/HTTP3 transport (WTI2) — feature-gated
wtransport = { version = "0.7", optional = true }

# QUIC transport (RC3 reference path) — feature-gated
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"], optional = true }
rcgen = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
wtransport = { version = "0.7", features = ["dangerous-configuration"] }
tungstenite = "0.24"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
datachannel = { version = "0.16", features = ["vendored"] }
webrtc-sdp = "0.3"
bolt-core = { path = "../bolt-core-sdk/rust/bolt-core" }
bolt-btr = { path = "../bolt-core-sdk/rust/bolt-btr", features = ["test-support"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
